--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='bin-api.swagger.yaml'></redoc>
+    <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.11/bin-api.swagger.yaml'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
