--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -374,7 +374,7 @@
                         vertical: "Vertical Shift",
                         scale: "Scale",
                         rotation: "Rotation",
-                        none : "None",
+                        none : "Remove Pattern",
                         close : "Close",
 
                       },
