--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -652,7 +652,7 @@
           //**                                        (renderSurface :  (('gloss') | (''+.*)),)?
           //**                                        (interior :  (('white') | (''+.*)),)?
           //**                                        (id :  ((''+.*)),)?
-          //**                                        (isDefault : (true | false),)?
+          //**                                        (isDefault : ('true' | 'false'),)?
           //**                                        }
           //**                               ,)*
           //**                            ],)+
@@ -666,7 +666,7 @@
                     renderBase: 'color',
                     interior: 'white',
                     id: 1,
-                    isDefault: true
+                    isDefault: 'true'
                   },
                   'Premium White': {
                     renderBase: 'color',
