--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -696,7 +696,7 @@
           //** materials{...} = [(enable : (true | false),)?]
           //**
               materials: {
-                enable: true
+                enable: false
               }
             },
 
