--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -132,9 +132,6 @@
           id: '79',
 
 
-          //(optional) 'imperial' or 'metric'
-          unitSystem: 'imperial',
-
           //(optional) 'vertical' or 'horizontal'
           //default/null : vertical
           fluting: 'vertical',
@@ -636,8 +633,6 @@
           //**          - renderBase : colorized or cardboard look and feel
           //**          - renderSurface : shiny or dull (reflective or not)
           //**          - interior : ???
-          //**          - id : finish identifier
-          //**          - isDefault : initially selected finish
           //**
           //** enable - null/default = false
           //** label - null/default = '' (empty string)
@@ -652,8 +647,6 @@
           //**                                        (renderBase : (('color' | 'kraft') | (''+.*)),)?
           //**                                        (renderSurface :  (('gloss') | (''+.*)),)?
           //**                                        (interior :  (('white') | (''+.*)),)?
-          //**                                        (id :  ((''+.*)),)?
-          //**                                        (isDefault : ('true' | 'false'),)?
           //**                                        }
           //**                               ,)*
           //**                            ],)+
@@ -665,9 +658,7 @@
                 options: {
                   'Standard White': {
                     renderBase: 'color',
-                    interior: 'white',
-                    id: 1,
-                    isDefault: 'true'
+                    interior: 'white'
                   },
                   'Premium White': {
                     renderBase: 'color',
