--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -132,6 +132,9 @@
           id: '79',
 
 
+          //(optional) 'imperial' or 'metric'
+          unitSystem: 'imperial',
+
           //(optional) 'vertical' or 'horizontal'
           //default/null : vertical
           fluting: 'vertical',
@@ -633,6 +636,8 @@
           //**          - renderBase : colorized or cardboard look and feel
           //**          - renderSurface : shiny or dull (reflective or not)
           //**          - interior : ???
+          //**          - id : finish identifier
+          //**          - isDefault : initially selected finish
           //**
           //** enable - null/default = false
           //** label - null/default = '' (empty string)
@@ -647,6 +652,8 @@
           //**                                        (renderBase : (('color' | 'kraft') | (''+.*)),)?
           //**                                        (renderSurface :  (('gloss') | (''+.*)),)?
           //**                                        (interior :  (('white') | (''+.*)),)?
+          //**                                        (id :  ((''+.*)),)?
+          //**                                        (isDefault : ('true' | 'false'),)?
           //**                                        }
           //**                               ,)*
           //**                            ],)+
@@ -658,7 +665,9 @@
                 options: {
                   'Standard White': {
                     renderBase: 'color',
-                    interior: 'white'
+                    interior: 'white',
+                    id: 1,
+                    isDefault: 'true'
                   },
                   'Premium White': {
                     renderBase: 'color',
