--- a/example-widget/studio.html
+++ b/example-widget/studio.html
@@ -319,6 +319,7 @@
                         labelHint : 'Conversion Chart',
                         resetHint : 'Reset Value',
                         warning : '* Resize required to apply changes. *',
+                        warning2 : '* Very Large Boxes may not be supported*',
                         fieldError : 'This field accepts only the numerical and decimal inputs.  Please try again',
                         select : 'Select a material',
                         custom : 'Custom',
