--- a/devApi.html
+++ b/devApi.html
@@ -18,8 +18,8 @@
     </style>
   </head>
   <body>
-     <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.11.2/bin-api.swagger.yaml'></redoc> 
-    <!--<redoc spec-url='http://localhost/bin-api-docs/bin-api.swagger.yaml'></redoc> -->
+    <!-- <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.11.2/bin-api.swagger.yaml'></redoc> -->
+    <redoc spec-url='http://localhost/bin-api-docs/develop.swagger.yaml'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
