updated swaggerdoc for 3.12_prerelease and pointed devApi.html to it for viewing

--- a/devApi.html
+++ b/devApi.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <title>ReDoc</title>
     <!-- needed for adaptive design -->
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Roboto:300,400,700" rel="stylesheet">
-
     <!--
     ReDoc doesn't change outer page styles
     -->
@@ -17,9 +17,11 @@
       }
     </style>
   </head>
+
   <body>
     <!-- <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.11.2/bin-api.swagger.yaml'></redoc> -->
-    <redoc spec-url='http://localhost/bin-api-docs/develop.swagger.yaml'></redoc>
+    <redoc spec-url='http://localhost/bin-api-docs/bin-api-3.12_prerelease.swagger.yaml'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
+
 </html>
