updated devAPI.html file with github hosted 3.12_prerelease yaml source doc for ease of use

--- a/devApi.html
+++ b/devApi.html
@@ -20,7 +20,7 @@
 
   <body>
     <!-- <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.11.2/bin-api.swagger.yaml'></redoc> -->
-    <redoc spec-url='http://localhost/bin-api-docs/bin-api-3.12_prerelease.swagger.yaml'></redoc>
+    <redoc spec-url='https://raw.githubusercontent.com/PackageX/bin-api-docs/api-docs_rc-3.12_prerelease/bin-api-3.12_prerelease.swagger.yaml'></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 
